--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta name="description" content="A Ginko Bus app for teaching purposes.">
     <link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico">
     <meta name="author" content="Fred Dadeau">
+    <link rel="manifest" href="ginko.webmanifest">
+    <script>
+        if ("serviceWorker" in navigator) {
+             navigator.serviceWorker.register("service-worker.js");
+           }
+
+    </script>
+
+    
         
     <!-- https://developers.google.com/web/fundamentals/design-and-ux/browser-customization/ -->
     <meta name="theme-color" content="#000000">
